--- a/client/src/pages/cart/cart.css
+++ b/client/src/pages/cart/cart.css
@@ -1,25 +1,24 @@
 /* Start of cart header styles */
 .cart-header {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  position: relative;
-  padding-top: 50px;
-  flex-wrap: wrap;
+  width: 100%;
+  padding: 0 18rem 0 14rem;
 }
 .cart-header h1 {
+  font-family: "Abril Fatface", cursive;
+  font-weight: 10;
   color: #fe97c4;
-  font-family: "Abril Fatface";
-  font-style: normal;
-  font-weight: 400;
-  letter-spacing: 1px;
+  font-size: 3em;
+  line-height: 3.3rem;
 }
 .cart-header a {
-  position: absolute;
-  right: 20%;
   text-decoration: none;
   border: 2px solid #fe97c4;
   padding: 7px;
   font-family: "Comfortaa";
+  color: black;
 }
 .cart-header a:hover {
   color: white;
@@ -35,14 +34,14 @@
   padding-left: 15%;
 }
 .cart-bar-items {
+  font-family: "Comfortaa", cursive;
+  font-size: 15px;
   display: flex;
   background-color: #fe97c4;
   justify-content: space-around;
   color: white;
   font-size: 22px;
   letter-spacing: 1px;
-  font-weight: bold;
-  font-style: italic;
 }
 /* End of  cart bar styles  */
 
@@ -93,8 +92,8 @@
 }
 .total-item-price {
   position: absolute;
-  right: 10%;
-  top: 50%;
+  right: 6%;
+  font-family: "Comfortaa", cursive;
   font-size: 2.1rem;
   color: #fe97c4;
 }
